--- a/user-profile-service/src/test/resources/application-test.yml
+++ b/user-profile-service/src/test/resources/application-test.yml
@@ -2,23 +2,29 @@ spring:
   application:
     name: user-profile-service
 
+  config:
+    import: ""
+
   cloud:
     config:
       enabled: false
-
     stream:
+      # Deshabilitar Kafka completamente en tests
+      default-binder: mock
+      bindings:
+        providerCreated-out-0:
+          destination: provider.created
+          content-type: application/json
+        userCreated-out-0:       
+          destination: user.created
+          content-type: application/json
       kafka:
         binder:
-          brokers: ${KAFKA_BOOTSTRAP_SERVERS:4.tcp.ngrok.io:18305}
-          configuration:
-            acks: all
-            enable.idempotence: true
-
-  config:
-    import: ""   # <- desactiva spring.config.import global (config-server)
+          brokers: localhost:9092
+          auto-create-topics: false
 
   datasource:
-    url: jdbc:h2:mem:userprofiledb;MODE=Oracle;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:userprofiledb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -30,9 +36,20 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
 
+  kafka:
+    # Deshabilitar auto-configuración de Kafka en tests
+    bootstrap-servers: localhost:9092
+    
 server:
   port: 0
 
 eureka:
   client:
     enabled: false
+
+# Información de la app (opcional en tests pero no hace daño)
+info:
+  app:
+    name: User profile Microservice
+    description: A microservice for the users profile operations
+    version: 1.0.0-TEST
